buttons added in the foods and drinks images.

--- a/index.html
+++ b/index.html
@@ -60,22 +60,31 @@
         <div class="col-md-6">
           <h2>Fast food</h2>
           <h3>You"l love our delicious food</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dicta sed, suscipit, voluptatum,
-            repellat unde, molestias quis eos ea iusto minima ut incidunt doloribus corporis laudantium?
-            Culpa labore iste ipsam eos officia omnis veniam nulla sequi a totam, vel numquam! Nobis
-            voluptatibus nihil quia facere earum magnam quis, asperiores fuga.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi amet temporibus repellendus
+            similique distinctio quibusdam ipsum minus, debitis, tenetur consectetur magnam maxime labore
+            veniam consequuntur harum illum et ad itaque voluptatum! Ullam minima quibusdam, repellat
+            placeat tempore possimus culpa ut facilis rem fuga! Blanditiis, dicta, nobis. Voluptas nulla
+            fuga vero quidem adipisci mollitia neque, sed asperiores et? Quaerat, saepe placeat adipisci
+            quae modi quidem earum obcaecati enim perferendis illo est error iure nam omnis ex id ipsa
+            aliquid at. Dolorem, veniam suscipit porro modi delectus odit maiores soluta velit non.</p>
+        </div>
+        <div class="button">
+          <button type="button">View Gallery</button>
         </div>
       </div>
       <div class="row foods">
 
         <div class="col-md-6">
-          <h4>Drinks</h4>
-          <h5>We also produce delicious drinks</h5>
+          <h2>Drinks</h2>
+          <h3>We also produce delicious drinks</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem tempora aperiam velit quo id
             labore at saepe placeat, quos assumenda fugiat cupiditate deleniti vel esse in a libero perferendis
             omnis, consequuntur quisquam magni, aliquam maxime. Sapiente id, repudiandae harum eos quod,
             nesciunt voluptates molestiae, error blanditiis nam numquam? Veritatis, ea.
           </p>
+          <div class="button">
+            <button type="button">View Gallery</button>
+          </div>
         </div>
         <div class="col-md-6 drinks-pics">
           <img src="images/drink1.jpg">
