--- a/index.html
+++ b/index.html
@@ -95,8 +95,61 @@
       </div>
     </div>
 
+    <div class="jumbotron2">
+      <div class="img2">
+        <img src="images/foodsBg.jpg">
+      </div>
+
+    </div>
+    <div id="comments">
+
+      <div class="row cont">
+
+        <div class="col-md-6">
+
+          <div id="cont1">
+            <span id="c1"><h3><strong>Our Happy Customers</strong></h3></span></br>
+            <span id="c2">George Richard</span></br>
+            <span id="c3">Lorem ipsum
+               dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+               tempor incididunt ut labore et dolore magna aliqua. Ut enim
+               ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+               ut aliquip ex ea commodo consequat</span><br/>
+            <div class="col-md-6">
+
+              <div id="cont2">
+                <span id="c4"><h4><strong>About Menu</strong></h4></span><br/>
+                <span id="c4"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                     elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                      laboris nisi ut aliquip ex ea commodo consequat</span></br>
+              </div>
+            </div>
+            <div id="people">
+              <img src="images/p1.png" style: "float:center">
+              <img src="images/p2.png" style="float:center">
+              <img src="images/p3.png" style="float:center">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <article class="col-md-6 col-md-6">
+
+      <div class="row">
+
+        <!-- </div>
+             <div class="row"> -->
 
 
+
+        <div id="contact">
+          Get our daily food items delivered to your email<br/>
+          <form>
+            <input type="email" placeholder="Enter Your Email">
+            <button type="email" name="button" class="btn">Submit</button>
+          </form>
+        </div>
 
 
   </body>
