footer added to the website.

--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
             <button type="email" name="button" class="btn">Submit</button>
           </form>
         </div>
+        <div id="footer">
+          <div id="ftMenu"><img src="images/logo_white.png"> MENU</div>
+          <br>Thats What We Are</br>
+          <div id="icons">
+            <img src="images/facebook.png">
+            <img src="images/twitter.png">
+            <img src="images/pinterest.png">
+          </div>
+          <span>2018 Menu Restaurant</span>
+
+        </div>
 
 
   </body>
