some changes made on both the html and the css file.

--- a/index.html
+++ b/index.html
@@ -95,10 +95,14 @@
       </div>
     </div>
 
-    <div class="jumbotron2">
-      <div class="img2">
-        <img src="images/foodsBg.jpg">
+
+    <div id="body2">
+      <div id="content">
+        <img src="img/assets/fastfood/chickenBurger.jpg" style="float:left">
+        <img src="img/assets/fastfood/beefBurger.jpg" style="float:left">
+        <img src="img/assets/fastfood/chickenPizza.jpg" style="float:left">
       </div>
+    </div>
 
     </div>
     <div id="comments">
