css and html modified.

--- a/index.html
+++ b/index.html
@@ -12,97 +12,82 @@
   <body>
     <div class="container-fluid">
       <div class="jumbotron">
-        <div class="img">
-          <img src="images/logoBig.png" class="logo">
-        </div>
-        <div class="head">
-          <h1>We provide the Best food <br> at the <strong>Right Price </strong>
-          </h1>
+        <header><img src="images/logoBig.png" alt=""> <i id="open menu" class="ion-navicon" </i>
+          <p>We Provide The Best Food</p>
+          <p>At The <strong>Right Price</strong>.</p>
+        </header>
+      </div>
+
+      <div class="menus" id="menu1">
+        <div class="minitop">Happy Hour</div>
+        <div class="minibottom">Party Time</div>
+      </div>
+      <div class="breakfast">
+        <div class="lunch">
+          <div class="dinner">
+
+          </div>
+          <div class="menus" id="menu2"><span>Breakfast</span></div>
+          <div class="menus" id="menu3"><span>Lunch</span></div>
+          <div class="menus" id="menu4"><span>Dinner</span></div>
+
         </div>
       </div>
 
-      <div class="menu">
-        <div class="col-md-3">
-          <div class="happy-time">
-            <div class="happy">
-              <p id="happy">Happy Hour</p>
-            </div>
-            <div class="time">
-              <p id="party">Party time</p>
-            </div>
+      <div class="container">
+        <div class="row foods">
+          <div class="col-md-6 food-pics">
+            <img src="images/fastFood1.jpg">
+            <img src="images/fastFood2.jpg">
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="br">
-            <p id="breakfast">Breakfast</p>
+          <div class="col-md-6">
+            <h2>Fast food</h2>
+            <h3>You"l love our delicious food</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi amet temporibus repellendus
+              similique distinctio quibusdam ipsum minus, debitis, tenetur consectetur magnam maxime
+              labore veniam consequuntur harum illum et ad itaque voluptatum! Ullam minima quibusdam,
+              repellat placeat tempore possimus culpa ut facilis rem fuga! Blanditiis, dicta, nobis.
+              Voluptas nulla fuga vero quidem adipisci mollitia neque, sed asperiores et? Quaerat, saepe
+              placeat adipisci quae modi quidem earum obcaecati enim perferendis illo est error iure
+              nam omnis ex id ipsa aliquid at. Dolorem, veniam suscipit porro modi delectus odit maiores
+              soluta velit non.</p>
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="ln">
-            <p id="lunch">Lunch</p>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="dn">
-            <p id="dinner">Dinner</p>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row foods">
-        <div class="col-md-6 food-pics">
-          <img src="images/fastFood1.jpg">
-          <img src="images/fastFood2.jpg">
-        </div>
-        <div class="col-md-6">
-          <h2>Fast food</h2>
-          <h3>You"l love our delicious food</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi amet temporibus repellendus
-            similique distinctio quibusdam ipsum minus, debitis, tenetur consectetur magnam maxime labore
-            veniam consequuntur harum illum et ad itaque voluptatum! Ullam minima quibusdam, repellat
-            placeat tempore possimus culpa ut facilis rem fuga! Blanditiis, dicta, nobis. Voluptas nulla
-            fuga vero quidem adipisci mollitia neque, sed asperiores et? Quaerat, saepe placeat adipisci
-            quae modi quidem earum obcaecati enim perferendis illo est error iure nam omnis ex id ipsa
-            aliquid at. Dolorem, veniam suscipit porro modi delectus odit maiores soluta velit non.</p>
-        </div>
-        <div class="button">
-          <button type="button">View Gallery</button>
-        </div>
-      </div>
-      <div class="row foods">
-
-        <div class="col-md-6">
-          <h2>Drinks</h2>
-          <h3>We also produce delicious drinks</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem tempora aperiam velit quo id
-            labore at saepe placeat, quos assumenda fugiat cupiditate deleniti vel esse in a libero perferendis
-            omnis, consequuntur quisquam magni, aliquam maxime. Sapiente id, repudiandae harum eos quod,
-            nesciunt voluptates molestiae, error blanditiis nam numquam? Veritatis, ea.
-          </p>
           <div class="button">
             <button type="button">View Gallery</button>
           </div>
         </div>
-        <div class="col-md-6 drinks-pics">
-          <img src="images/drink1.jpg">
-          <img src="images/drink2.jpg">
+        <div class="row foods">
+
+          <div class="col-md-6">
+            <h2>Drinks</h2>
+            <h3>We also produce delicious drinks</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem tempora aperiam velit quo
+              id labore at saepe placeat, quos assumenda fugiat cupiditate deleniti vel esse in a libero
+              perferendis omnis, consequuntur quisquam magni, aliquam maxime. Sapiente id, repudiandae
+              harum eos quod, nesciunt voluptates molestiae, error blanditiis nam numquam? Veritatis,
+              ea.
+            </p>
+            <div class="button">
+              <button type="button">View Gallery</button>
+            </div>
+          </div>
+          <div class="col-md-6 drinks-pics">
+            <img src="images/drink1.jpg">
+            <img src="images/drink2.jpg">
+          </div>
+
+
         </div>
-
-
       </div>
-    </div>
 
 
-    <div id="body2">
-      <div id="content">
-        <img src="img/assets/fastfood/chickenBurger.jpg" style="float:left">
-        <img src="img/assets/fastfood/beefBurger.jpg" style="float:left">
-        <img src="img/assets/fastfood/chickenPizza.jpg" style="float:left">
+      <div id="body2">
+        <div id="content">
+          <img src="images/chickenBurger.jpg" style="float:left">
+          <img src="images/beefBurger.jpg" style="float:left">
+          <img src="images/chickenPizza.jpg" style="float:left">
+        </div>
       </div>
-    </div>
 
     </div>
     <div id="comments">
