--- a/index.html
+++ b/index.html
@@ -12,81 +12,92 @@
   <body>
     <div class="container-fluid">
       <div class="jumbotron">
-        <header><img src="images/logoBig.png" alt=""> <i id="open menu" class="ion-navicon" </i>
-          <p>We Provide The Best Food</p>
-          <p>At The <strong>Right Price</strong>.</p>
-        </header>
-      </div>
-
-      <div class="menus" id="menu1">
-        <div class="minitop">Happy Hour</div>
-        <div class="minibottom">Party Time</div>
-      </div>
-      <div class="breakfast">
-        <div class="lunch">
-          <div class="dinner">
-
-          </div>
-          <div class="menus" id="menu2"><span>Breakfast</span></div>
-          <div class="menus" id="menu3"><span>Lunch</span></div>
-          <div class="menus" id="menu4"><span>Dinner</span></div>
-
+        <div class="img">
+          <img src="images/logoBig.png" class="logo">
+        </div>
+        <div class="head">
+          <h1>We provide the Best food <br> at the <strong>Right Price </strong>
+          </h1>
         </div>
       </div>
 
-      <div class="container">
-        <div class="row foods">
-          <div class="col-md-6 food-pics">
-            <img src="images/fastFood1.jpg">
-            <img src="images/fastFood2.jpg">
+      <div class="menu">
+        <div class="col-md-3">
+          <div class="happy-time">
+            <div class="happy">
+              <p id="happy">Happy Hour</p>
+            </div>
+            <div class="time">
+              <p id="party">Party time</p>
+            </div>
           </div>
-          <div class="col-md-6">
-            <h2>Fast food</h2>
-            <h3>You"l love our delicious food</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi amet temporibus repellendus
-              similique distinctio quibusdam ipsum minus, debitis, tenetur consectetur magnam maxime
-              labore veniam consequuntur harum illum et ad itaque voluptatum! Ullam minima quibusdam,
-              repellat placeat tempore possimus culpa ut facilis rem fuga! Blanditiis, dicta, nobis.
-              Voluptas nulla fuga vero quidem adipisci mollitia neque, sed asperiores et? Quaerat, saepe
-              placeat adipisci quae modi quidem earum obcaecati enim perferendis illo est error iure
-              nam omnis ex id ipsa aliquid at. Dolorem, veniam suscipit porro modi delectus odit maiores
-              soluta velit non.</p>
+        </div>
+        <div class="col-md-3">
+          <div class="br">
+            <p id="breakfast">Breakfast</p>
           </div>
+        </div>
+        <div class="col-md-3">
+          <div class="ln">
+            <p id="lunch">Lunch</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="dn">
+            <p id="dinner">Dinner</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row foods">
+        <div class="col-md-6 food-pics">
+          <img src="images/fastFood1.jpg">
+          <img src="images/fastFood2.jpg">
+        </div>
+        <div class="col-md-6">
+          <h2>Fast food</h2>
+          <h3>You"l love our delicious food</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi amet temporibus repellendus
+            similique distinctio quibusdam ipsum minus, debitis, tenetur consectetur magnam maxime labore
+            veniam consequuntur harum illum et ad itaque voluptatum! Ullam minima quibusdam, repellat
+            placeat tempore possimus culpa ut facilis rem fuga! Blanditiis, dicta, nobis. Voluptas nulla
+            fuga vero quidem adipisci mollitia neque, sed asperiores et? Quaerat, saepe placeat adipisci
+            quae modi quidem earum obcaecati enim perferendis illo est error iure nam omnis ex id ipsa
+            aliquid at. Dolorem, veniam suscipit porro modi delectus odit maiores soluta velit non.</p>
+        </div>
+        <div class="button">
+          <button type="button">View Gallery</button>
+        </div>
+      </div>
+      <div class="row foods">
+
+        <div class="col-md-6">
+          <h2>Drinks</h2>
+          <h3>We also produce delicious drinks</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem tempora aperiam velit quo id
+            labore at saepe placeat, quos assumenda fugiat cupiditate deleniti vel esse in a libero perferendis
+            omnis, consequuntur quisquam magni, aliquam maxime. Sapiente id, repudiandae harum eos quod,
+            nesciunt voluptates molestiae, error blanditiis nam numquam? Veritatis, ea.
+          </p>
           <div class="button">
             <button type="button">View Gallery</button>
           </div>
         </div>
-        <div class="row foods">
-
-          <div class="col-md-6">
-            <h2>Drinks</h2>
-            <h3>We also produce delicious drinks</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem tempora aperiam velit quo
-              id labore at saepe placeat, quos assumenda fugiat cupiditate deleniti vel esse in a libero
-              perferendis omnis, consequuntur quisquam magni, aliquam maxime. Sapiente id, repudiandae
-              harum eos quod, nesciunt voluptates molestiae, error blanditiis nam numquam? Veritatis,
-              ea.
-            </p>
-            <div class="button">
-              <button type="button">View Gallery</button>
-            </div>
-          </div>
-          <div class="col-md-6 drinks-pics">
-            <img src="images/drink1.jpg">
-            <img src="images/drink2.jpg">
-          </div>
-
-
+        <div class="col-md-6 drinks-pics">
+          <img src="images/drink1.jpg">
+          <img src="images/drink2.jpg">
         </div>
+
+
       </div>
+    </div>
 
-
-      <div id="body2">
-        <div id="content">
-          <img src="images/chickenBurger.jpg" style="float:left">
-          <img src="images/beefBurger.jpg" style="float:left">
-          <img src="images/chickenPizza.jpg" style="float:left">
-        </div>
+    <div class="jumbotron2">
+      <div class="img2">
+        <img src="images/foodsBg.jpg">
       </div>
 
     </div>
@@ -104,16 +115,6 @@
                tempor incididunt ut labore et dolore magna aliqua. Ut enim
                ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                ut aliquip ex ea commodo consequat</span><br/>
-            <div class="col-md-6">
-
-              <div id="cont2">
-                <span id="c4"><h4><strong>About Menu</strong></h4></span><br/>
-                <span id="c4"> Lorem ipsum dolor sit amet, consectetur adipiscing
-                     elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                      laboris nisi ut aliquip ex ea commodo consequat</span></br>
-              </div>
-            </div>
             <div id="people">
               <img src="images/p1.png" style: "float:center">
               <img src="images/p2.png" style="float:center">
@@ -124,13 +125,19 @@
       </div>
     </div>
     <article class="col-md-6 col-md-6">
-
+      -
       <div class="row">
 
         <!-- </div>
              <div class="row"> -->
 
+        <div class="col-md-6">
 
+          <div id="cont2">
+            <span id="c4"><h4><strong>About Menu</strong></h4></span><br/>
+            <span id="c4"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span></br>
+          </div>
+        </div>
 
         <div id="contact">
           Get our daily food items delivered to your email<br/>
