customer comments added to the index.html file

--- a/index.html
+++ b/index.html
@@ -101,62 +101,52 @@
       </div>
 
     </div>
-    <div id="comments">
 
-      <div class="row cont">
-
-        <div class="col-md-6">
-
-          <div id="cont1">
-            <span id="c1"><h3><strong>Our Happy Customers</strong></h3></span></br>
-            <span id="c2">George Richard</span></br>
-            <span id="c3">Lorem ipsum
-               dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-               tempor incididunt ut labore et dolore magna aliqua. Ut enim
-               ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-               ut aliquip ex ea commodo consequat</span><br/>
-            <div id="people">
-              <img src="images/p1.png" style: "float:center">
-              <img src="images/p2.png" style="float:center">
-              <img src="images/p3.png" style="float:center">
+    <div class="container-fluid">
+      <div class="team">
+        <div class="row">
+          <div class="col-md-7">
+            <div class="clearfix">
+              <div class="vl">
+              </div>
+              <h3>OUR HAPPY CUSTOMERS</h3>
+              <p>Great food is awesome, their foods are not onlygreat, but also in the rightprice. i"ll
+                highlyrecommend them. </p>
+              <img src="images/p1.png" alt="person1">
+              <img src="images/p2.png" alt="person2">
+              <img src="images/p3.png" alt="person3">
             </div>
+          </div>
+          <div class="col-md-5">
+            <h3>About menu </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur laborum quo a dolorem
+              officia, sunt vitae culpa, eos earum veniam.</p>
           </div>
         </div>
       </div>
     </div>
-    <article class="col-md-6 col-md-6">
-      -
-      <div class="row">
 
-        <!-- </div>
-             <div class="row"> -->
 
-        <div class="col-md-6">
 
-          <div id="cont2">
-            <span id="c4"><h4><strong>About Menu</strong></h4></span><br/>
-            <span id="c4"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span></br>
-          </div>
-        </div>
 
-        <div id="contact">
-          Get our daily food items delivered to your email<br/>
-          <form>
-            <input type="email" placeholder="Enter Your Email">
-            <button type="email" name="button" class="btn">Submit</button>
-          </form>
-        </div>
-        <div id="footer">
-          <div id="ftMenu"><img src="images/logo_white.png"> MENU</div>
-          <br>Thats What We Are</br>
-          <div id="icons">
-            <img src="images/facebook.png">
-            <img src="images/twitter.png">
-            <img src="images/pinterest.png">
-          </div>
-          <span>2018 Menu Restaurant</span>
+    <div id="contact">
+      Get our daily food items delivered to your email<br/>
+      <form>
+        <input type="email" placeholder="Enter Your Email">
+        <button type="email" name="button" class="btn">Submit</button>
+      </form>
+    </div>
+    <div id="footer">
+      <div id="ftMenu"><img src="images/logo_white.png"> MENU</div>
+      <br>Thats What We Are</br>
+      <div id="icons">
+        <img src="images/facebook.png">
+        <img src="images/twitter.png">
+        <img src="images/pinterest.png">
+      </div>
+      <span>2018 Menu Restaurant</span>
 
-        </div>
+    </div>
 
 
   </body>
